feat: 知识覆盖度补充第三轮——java 深补 42 题（JVM/并发/Spring 全家桶/设计模式/版本演进）、算法 12 题、分布式 11 题、python 8 题、ai 4 题、kafka 生产者 1 题，速答手册新增设计模式与 Java 版本小节共 46 条